@@ -220,6 +220,7 @@ image.poster.size=Poster size
 image.poster.naming=Poster file naming
 image.fanart.size=Fanart size
 image.fanart.naming=Fanart file naming
+image.thumb.naming=Thumb file naming
 image.notfound.fanart=No fanart found
 image.notfound.poster=No poster found
 image.notfound.banner=No banner found
